// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`skeleton > renders avatar 1`] = `
<DocumentFragment>
  <div
    class="skeleton"
    role="img"
  >
    <div
      class="skeleton__avatar"
    />
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders default skeleton 1`] = `
<DocumentFragment>
  <div
    aria-label="Loading"
    class="skeleton"
    role="img"
    style="width: 220px"
  />
</DocumentFragment>
`;

exports[`skeleton > renders text 1`] = `
<DocumentFragment>
  <div
    class="demo-text-container"
  >
    <div
      class="skeleton"
      role="img"
    >
      <div
        class="skeleton__text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders text multiLine 1`] = `
<DocumentFragment>
  <div
    class="demo-text-container"
  >
    <div
      class="skeleton"
      role="img"
      style="width:220px"
    >
      <div
        class="skeleton__text skeleton__text--multiline skeleton__text--large"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton > renders tile 1`] = `
<DocumentFragment>
  <div
    class="demo-tile-container"
  >
    <div
      class="skeleton"
      role="img"
    >
      <div
        class="skeleton__image custom-image"
      />
      <div
        class="skeleton__text skeleton__text--multiline skeleton__text--large"
      />
    </div>
  </div>
</DocumentFragment>
`;
